--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Timothy Quang Phuc Nguyen</h1>
-								<p>A LIFE TRAVELLER</p>
+								<p>Programmer. Educator. Life Traveller.</p>
 							</div>
 						</div>
 						<nav>
