--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <p>Profession wise, I am a Zend Certified PHP Engineer, full-stack developer and winner of Edtech Asia Hackathon 2016.</p>
                                 <p>In personal life, I have a loving family, from whom I witnessed love and sacrifice. There are many places to go to, but only one home to return.</p>
                                 <p>I thank God for the all great people I have in life. Many came, and left, some even meant so much to me. But life always goes on, and I am thankful for it.</p>
-                                <p>Tim</p>
+                                <p>Tim.</p>
 							</article>
 
 						
