--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
 								<span class="image main"><img src="/img/pic01.jpg" alt="" /></span>
                                 <p>Hi there :)</p>
 								<p>I grew up in Saigon, the heart of southern Vietnam. In 2009, I left for higher education in Singapore, living my 20s in the city island till this day. In 2013 I graduated from National University of Singapore (NUS), with BSc (Hons) in Computer Science.</p>
-                                <p>I have been through many types of work. From serving at restaurant to fixing hardware. From telemarketing to teaching assistant at NUS. From building tech startups to working at big corporations. However, I found my love for education and programming.</p>
                                 <p>Profession wise, I am a Zend Certified PHP Engineer, full-stack developer and winner of Edtech Asia Hackathon 2016.</p>
                                 <p>In personal life, I have a loving family, from whom I witnessed love and sacrifice. There are many places to go to, but only one home to return.</p>
-                                <p>I thank God for the all great people I have in life. Many came, and left, some even meant so much to me. But life always goes on, and I am thankful for it.</p>
+                                <p>I thank God for the all great people I have in life. Many came, and left, some even meant so much to me. But life always goes on, and I am thankful for everything.</p>
                                 <p>Tim.</p>
 							</article>
 
@@ -59,7 +58,8 @@
 							<article id="passion">
 								<h2 class="major">Passion</h2>
 								<span class="image main"><img src="/img/pic02.jpg" alt="" /></span>
-								<p>Education is my passion and I am interested in <a href="https://en.wikipedia.org/wiki/Science,_technology,_engineering,_and_mathematics" target="_blank">STEM</a> learning for young learners. I want to enable kids to think and expand their creativity through programming.</p>
+                                <p>I have been through many types of work. From serving at restaurant to fixing hardware. From telemarketing to teaching assistant at NUS. From building tech startups to working at big corporations. However, I found my passion for both education and programming.</p>
+								<p>In Education, I am interested in <a href="https://en.wikipedia.org/wiki/Science,_technology,_engineering,_and_mathematics" target="_blank">STEM</a> learning for young learners. I want to enable kids to think and expand their creativity through programming.</p>
                                 <p>There are many underprivileged kids in Vietnam lack of resources and opportunities to build career and contribute to society. And they end up wasting their life on drugs or cheap overseas labouring.</p>
                                 <p>I used to teach various programming courses as teaching assistants while I was in university. For years I have been conducting voluntary training courses for the Vietnamese labour workers in Johor Bahru, Malaysia. I love combining IT and education, love seeing people grow.</p>
                                 <p>On the side, I make music, backpack travel, hack and blog about various stuff.</p>
