--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Timothy Quang Phuc Nguyen</h1>
-								<p>Programmer. Educator. Life Traveller.</p>
+								<p>Life Traveller.</p>
 							</div>
 						</div>
 						<nav>
@@ -57,8 +57,7 @@
 							<article id="passion">
 								<h2 class="major">Passion</h2>
 								<span class="image main"><img src="/img/pic02.jpg" alt="" /></span>
-                                <p>I have been through many types of work. From serving at restaurant to fixing hardware. From telemarketing to teaching assistant at NUS. From building tech startups to working at big corporations. However, I found my passion for both education and programming.</p>
-								<p>In Education, I am interested in <a href="https://en.wikipedia.org/wiki/Science,_technology,_engineering,_and_mathematics" target="_blank">STEM</a> learning for young learners. I want to enable kids to think and expand their creativity through programming.</p>
+                                <p>I have been through many types of work and I found my passion for both education and programming. I am interested in <a href="https://en.wikipedia.org/wiki/Science,_technology,_engineering,_and_mathematics" target="_blank">STEM</a> learning for young learners. I want to enable kids to think and expand their creativity through programming.</p>
                                 <p>There are many underprivileged kids in Vietnam lack of resources and opportunities to build career and contribute to society. And they end up wasting their life on drugs or cheap overseas labouring.</p>
                                 <p>I used to teach various programming courses as teaching assistants while I was in university. For years I have been conducting voluntary training courses for the Vietnamese labour workers in Johor Bahru, Malaysia. I love combining IT and education, love seeing people grow.</p>
                                 <p>On the side, I make music, backpack travel, hack and blog about various stuff.</p>
