--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                                 <p>Hi there :)</p>
 								<p>I grew up in Saigon, the heart of southern Vietnam. In 2009, I left for higher education in Singapore, living my 20s in the city island till this day. In 2013 I graduated from National University of Singapore (NUS), with BSc (Hons) in Computer Science.</p>
                                 <p>Profession wise, I am a Zend Certified PHP Engineer, full-stack developer and winner of Edtech Asia Hackathon 2016.</p>
-                                <p>In personal life, I have a loving family, from whom I witnessed love and sacrifice. There are many places to go to, but only one home to return.</p>
-                                <p>I thank God for the all great people I have in life. Many came, and left, some even meant so much to me. But life always goes on, and I am thankful for everything.</p>
+                                <p>In personal life, I have a loving family, from whom I witnessed love and sacrifice. I am thankful for the all great people and friendships I have in life.</p>
 							</article>
 
 						
