updated links and bio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href="#life">Life</a></li>
                                 <li><a href="#passion">Passion</a></li>
                                 <li><a href="#contact">Contact</a></li>
-                                <li><a href="https://quangphuc789.github.io/blog" target="_blank">Blog</a></li>
+                                <li><a href="http://quangphuc789.com/blog" target="_blank">Blog</a></li>
 								
 							</ul>
 						</nav>
