--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ ga('send', 'pageview');
       
         <div class="row centered">
   <div class="col-lg-8 col-lg-offset-2 w">
-    <h1>Timothy Quang Phuc Nguyen<br><h3>Software Engineer - Life Traveller</h3></h1>
+    <h1><h2>Timothy Quang Phuc Nguyen</h2><br><h3>Software Engineer - Pianist - Life Traveller</h3></h1>
   </div>
 </div>
 
